Colocando o projeto no github

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg ">
             <div class="container h-100 py-3">
-                <a class="fs-2 fw-bold navbar-brand links-menu transition" href="#">Logo</a>
+                <a class="fs-2 fw-bold navbar-brand links-menu transition" href="/index.html">Logo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -29,10 +29,10 @@
                 </button>
                 <div class="collapse navbar-collapse show justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav gap-4">
-                        <a class="nav-link links-menu active-menu fs-5" href="#">Home</a>
+                        <a class="nav-link links-menu active-menu fs-5" href="/index.html">Home</a>
                         <a class="nav-link links-menu fs-5" href="./assets/pages/service.html">Serviços</a>
-                        <a class="nav-link links-menu fs-5" href="#">Produtos</a>
-                        <a class="nav-link links-menu fs-5" href="#">Contato</a>
+                        <a class="nav-link links-menu fs-5" href="./assets/pages/product.html">Produtos</a>
+                        <a class="nav-link links-menu fs-5" href="./assets/pages/contact.html">Contato</a>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <button class="btn">Mais informações</button>
                 </article>
                 <figure class="col-lg-6">
-                    <img class="img-fluid" src="./assets/images/drone-rafiki.svg" alt="Imagem drone amico">
+                    <img class="img-fluid" src="./assets/images/imagesIndex/drone-rafiki.svg" alt="Imagem drone amico">
                 </figure>
             </div>
         </section>
@@ -63,59 +63,9 @@
         </section>
 
         <section class="section-cards py-5">
-            <div class="container row ms-auto me-auto">
+            <div class="section-cards-cont container row ms-auto me-auto">
 
-                <div class="col-md-6 col-lg-3 p-2">
-                    <div class="card">
-                        <img src="./assets/images/drone1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Drone 1</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Saiba mais</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-3 p-2">
-                    <div class="card">
-                        <img src="./assets/images/drone2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Drone 2</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Saiba mais</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-3 p-2">
-                    <div class="card">
-                        <img src="./assets/images/drone3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Drone 3</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Saiba mais</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-3 p-2">
-                    <div class="card">
-                        <img src="./assets/images/drone4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Drone 4</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Saiba mais</a>
-                        </div>
-                    </div>
-                </div>
+               
 
             </div>
         </section>
@@ -146,6 +96,7 @@
     </footer>
 
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
