--- a/assets/pages/product.html
+++ b/assets/pages/product.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container h-100 py-3">
-                <a class="fs-2 fw-bold navbar-brand links-menu transition" href="/index.html">Logo</a>
+                <a class="fs-2 fw-bold navbar-brand links-menu transition" href="/projetoDrone/index.html">Logo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                 </button>
                 <div class="collapse navbar-collapse show justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav gap-4">
-                        <a class="nav-link links-menu fs-5" href="/index.html">Home</a>
+                        <a class="nav-link links-menu fs-5" href="/projetoDrone/index.html">Home</a>
                         <a class="nav-link links-menu fs-5" href="./service.html">Serviços</a>
                         <a class="nav-link links-menu active-menu fs-5" href="./product.html">Produtos</a>
                         <a class="nav-link links-menu fs-5" href="./contact.html">Contato</a>
