--- a/assets/pages/thanks.html
+++ b/assets/pages/thanks.html
@@ -23,7 +23,7 @@
     <div class="container d-flex flex-column justify-content-center align-items-center">
         
         <div class="voltar d-flex gap-1 align-items-center justify-content-start w-100">
-            <a href="">
+            <a href="/projetoDrone/index.html">
                 <i class="bi bi-arrow-left-circle arrow"></i>
                 <p>Voltar</p>
             </a>
