ajustando o caminho da index

--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -29,7 +29,7 @@
                 </button>
                 <div class="collapse navbar-collapse show justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav gap-4">
-                        <a class="nav-link links-menu fs-5" href="../projetoDrone/index.html">Home</a>
+                        <a class="nav-link links-menu fs-5" href="/projetoDrone/index.html">Home</a>
                         <a class="nav-link links-menu active-menu fs-5" href="./service.html">Serviços</a>
                         <a class="nav-link links-menu fs-5" href="./product.html">Produtos</a>
                         <a class="nav-link links-menu fs-5" href="./contact.html">Contato</a>
