--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <div class="collapse navbar-collapse show justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav gap-4">
                         <a class="nav-link links-menu active-menu fs-5" href="../projetoDrone/index.html">Home</a>
-                        <a class="nav-link links-menu fs-5" href="./assets/pages/service.html">Serviços</a>
-                        <a class="nav-link links-menu fs-5" href="./assets/pages/product.html">Produtos</a>
-                        <a class="nav-link links-menu fs-5" href="./assets/pages/contact.html">Contato</a>
+                        <a class="nav-link links-menu fs-5" href="./pages/service.html">Serviços</a>
+                        <a class="nav-link links-menu fs-5" href="./pages/product.html">Produtos</a>
+                        <a class="nav-link links-menu fs-5" href="./pages/contact.html">Contato</a>
                     </div>
                 </div>
             </div>
@@ -94,8 +94,7 @@
             </div>
         </div>
     </footer>
-
-    <script src="./assets/js/main.js"></script>
+    
     <script src="./assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
