--- a/pages/product.html
+++ b/pages/product.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/styleProduct.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/styleProduct.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container h-100 py-3">
-                <a class="fs-2 fw-bold navbar-brand links-menu transition" href="/projetoDrone/index.html">Logo</a>
+                <a class="fs-2 fw-bold navbar-brand links-menu transition" href="../projetoDrone/index.html">Logo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                 </button>
                 <div class="collapse navbar-collapse show justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav gap-4">
-                        <a class="nav-link links-menu fs-5" href="/projetoDrone/index.html">Home</a>
+                        <a class="nav-link links-menu fs-5" href="../projetoDrone/index.html">Home</a>
                         <a class="nav-link links-menu fs-5" href="./service.html">Serviços</a>
                         <a class="nav-link links-menu active-menu fs-5" href="./product.html">Produtos</a>
                         <a class="nav-link links-menu fs-5" href="./contact.html">Contato</a>
@@ -48,13 +48,13 @@
             </div>
             <div class="product-cont mt-5 row d-flex justify-content-center mb-4">
 
-                
+               
 
             </div>
         </section>
     </main>
 
-    <script src="../js/product.js"></script>
+    <script src="../assets/js/product.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
