--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Drone VZ</title>
+    <title>Drone VZ - home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg ">
             <div class="container h-100 py-3">
-                <a class="fs-2 fw-bold navbar-brand links-menu transition" href="./assets/pages/home.html">Logo</a>
+                <a class="fs-2 fw-bold navbar-brand links-menu transition" href="./home.html">Logo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -29,10 +29,10 @@
                 </button>
                 <div class="collapse navbar-collapse show justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav gap-4">
-                        <a class="nav-link links-menu active-menu fs-5" href="./assets/pages/home.html">Home</a>
-                        <a class="nav-link links-menu fs-5" href="./assets/pages/service.html">Serviços</a>
-                        <a class="nav-link links-menu fs-5" href="./assets/pages/product.html">Produtos</a>
-                        <a class="nav-link links-menu fs-5" href="./assets/pages/contact.html">Contato</a>
+                        <a class="nav-link links-menu active-menu fs-5" href="./home.html">Home</a>
+                        <a class="nav-link links-menu fs-5" href="./service.html">Serviços</a>
+                        <a class="nav-link links-menu fs-5" href="./product.html">Produtos</a>
+                        <a class="nav-link links-menu fs-5" href="./contact.html">Contato</a>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <button class="btn">Mais informações</button>
                 </article>
                 <figure class="col-lg-6">
-                    <img class="img-fluid" src="./assets/images/imagesIndex/drone-rafiki.svg" alt="Imagem drone amico">
+                    <img class="img-fluid" src="../images/imagesIndex/drone-rafiki.svg" alt="Imagem drone amico">
                 </figure>
             </div>
         </section>
@@ -95,7 +95,7 @@
         </div>
     </footer>
     
-    <script src="./assets/js/index.js"></script>
+    <script src="../js/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
