ajustando o caminho do form

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -85,7 +85,7 @@
                     <input type="hidden" name="_subject" value="Novo contato !!">
                     <input class="input-honey" type="text" name="_honey">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://victoryudi28.github.io/thanks.html">
+                    <input type="hidden" name="_next" value="https://victoryudi28.github.io/projetoDrone/assets/pages/thanks.html">
                 </form>
 
             </div>
